# meet2obsidian

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  config.py  create-docs-dirs.sh  pyproject.toml  requirements.txt  run_tests.py  setup-documentation.sh  setup.py
docs/: README.md  audio-extraction-tests.md  development.md  epic-23-implementation.md  epic-23-summary.md  file-manager-implementation.md  index.md  technical-overview.md
docs/api/: README.md  claude.md  revai.md
docs/dev/: README.md
docs/internal_docs/: INTRODUCTION.md  Kanban meet2obsidian dev.md  Архитектура системы.md  Дорожная карта.md  Технический стек.md  Функциональные и нефункциональные требования.md
docs/user/: README.md
examples/: README.md  cache_example.py  enhanced_security_example.py  file_manager_example.py  import_test.py  logging_example.py  security_example.py  test_logging_compliance.py
meet2obsidian/: cache.md  cache.py  cli.py  config.py  core.py  launchagent.py  monitor.py
meet2obsidian/api/: claude.py  revai.py
meet2obsidian/audio/: extractor.py
meet2obsidian/cli_commands/: __init__.py  apikeys_command.py  cache_command.py  completion.py  config_command.py  logs_command.py  process_command.py  service_command.py  status_command.py
meet2obsidian/processing/: __init__.py  audio_processor.py  pipeline.py  processor.py  queue.py  state.py
meet2obsidian/utils/: logging.py  (+4 more)
scripts/: check_videos.py  setup_api_keys.py  setup_launchagent.sh
tests/: README.md  __init__.py  conftest.py  run_audio_extractor_tests.py  run_processing_queue_tests.py  run_tests.py
(+74 files in other folders)
